# app/routes/user.js
@@ -11,11 +11,11 @@ module.exports.setRouter = (app) => {
 
     app.post(`${baseUrl}/login`, userController.loginUser);
 
-    app.patch(`${baseUrl}/:id`, userController.updateUser);
+    app.patch(`${baseUrl}/:id`, auth, userController.updateUser);
 
-    app.delete(`${baseUrl}/:id`, userController.deleteUser);
+    app.delete(`${baseUrl}/:id`, auth, userController.deleteUser);
 
-    app.get(`${baseUrl}/:id`, userController.getUser);
+    app.get(`${baseUrl}/:id`, auth, userController.getUser);
 
     app.get(`${baseUrl}/`, auth, userController.getUsers);
 
